// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MovieItem component should render active movie 1`] = `
<li
  className="root active"
  onClick={[Function]}
>
  A New Hope
  <span
    className="starIcon"
  >
    <svg
      className=""
      fill="grey"
      height="25"
      width="23"
    >
      <polygon
        points="9.9, 1.1, 3.3, 21.78, 19.8, 8.58, 0, 8.58, 16.5, 21.78"
        style={
          Object {
            "fillRule": "nonzero",
          }
        }
      />
    </svg>
  </span>
</li>
`;

exports[`MovieItem component should render by default 1`] = `
<li
  className="root "
  onClick={[Function]}
>
  A New Hope
  <span
    className="starIcon"
  >
    <svg
      className=""
      fill="grey"
      height="25"
      width="23"
    >
      <polygon
        points="9.9, 1.1, 3.3, 21.78, 19.8, 8.58, 0, 8.58, 16.5, 21.78"
        style={
          Object {
            "fillRule": "nonzero",
          }
        }
      />
    </svg>
  </span>
</li>
`;

exports[`MovieItem component should render favorite and active movie 1`] = `
<li
  className="root active"
  onClick={[Function]}
>
  A New Hope
  <span
    className="starIcon"
  >
    <svg
      className=""
      fill="yellow"
      height="25"
      width="23"
    >
      <polygon
        points="9.9, 1.1, 3.3, 21.78, 19.8, 8.58, 0, 8.58, 16.5, 21.78"
        style={
          Object {
            "fillRule": "nonzero",
          }
        }
      />
    </svg>
  </span>
</li>
`;
